# aa-ballot-box

./: .coveragerc  Makefile  README.md  pyproject.toml
aa-ballot-box/: __init__.py  apps.py  auth_hooks.py  urls.py
aa-ballot-box/templates/aa-ballot-box/: base.html  index.html
ballotbox/: admin.py  auth_hooks.py  models.py  urls.py  views.py
ballotbox/migrations/: 0001_initial.py  0002_ballot_allowed_states_ballot_public_results_and_more.py  0003_ballot_hide_results_until_closed_and_more.py
ballotbox/templates/aa-ballot-box/: result.html  vote.html
ballotbox/templates/ballotbox/: index.html  results.html  vote.html
ballotbox/templatetags/: __init__.py  ballotbox_tags.py
testauth/settings/: local.py
